<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">


    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/signupLogoDescription"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_transparent"
        android:layout_marginTop="70dp">
    </ImageView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/imagePick"
            android:contentDescription="@string/signupProfileImageDescription"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical|center_horizontal"
             android:background="@null"
            android:src="@drawable/pickimage"
            android:scaleType="centerInside"
            >
        </ImageButton>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupNameLayout"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            >
        </TextView>
        <EditText
            android:id="@+id/fieldName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/roundedbutton"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/signupNamelPlaceholder"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            >
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupEmailLayout"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            >
        </TextView>
        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/roundedbutton"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/signupEmailPlaceholder"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            >
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupPasswordLayout"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            >
        </TextView>
        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/roundedbutton"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/signupPasswordPlaceholder"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            >
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupClassLayout"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            >
        </TextView>
       <Spinner
           android:id="@+id/classSpinner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="50dp"
           android:layout_marginRight="50dp"
           android:layout_marginTop="20dp"
           android:layout_marginBottom="10dp"
           android:drawSelectorOnTop="true"
           android:entries="@array/classes"
           android:textColor="@color/textColor"
           >
       </Spinner>
        <Button
            android:id="@+id/emailCreateAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupButton"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundedbuttonwhite"
            >
        </Button>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>