<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"

    >


    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/loginLogoDescription"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_transparent"
        android:layout_marginTop="70dp"
       >
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="400dp"
        android:orientation="vertical"

        android:layout_below="@id/logo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginEmailLayout"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            >

        </TextView>

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/roundedbutton"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/loginEmailPlaceholder"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textEmailAddress"
            >

        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginPasswordLayout"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor"
            >
        </TextView>

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/roundedbutton"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/loginPasswordPlaceholder"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            >

        </EditText>

        <Button
            android:id="@+id/emailSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:background="@drawable/roundedbutton"
            >
        </Button>

        <Button
            android:id="@+id/emailCreateAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupButton"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundedbuttonwhite"
            >
        </Button>
    </LinearLayout>


</RelativeLayout>