<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".MyProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imagePick"
            android:contentDescription="@string/myProfileImageDescription"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="150dp"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/pickimage">

        </ImageButton>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/myProfileLogoutButton"
            android:textColor="@color/white">

        </Button>
        <Button
            android:id="@+id/generateFileButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/myProfileGetCoursesButton"
            android:textColor="@color/white">

        </Button>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/myProfileNameLayout"
            android:textColor="@color/textColor">

        </TextView>

        <TextView
            android:id="@+id/userClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/myProfileClassLayout"
            android:textColor="@color/textColor">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/myProfileTableTitle"
            android:textColor="@color/textColor">
        </TextView>

        <com.androidplot.xy.XYPlot
            android:id="@+id/mySimpleXYPlot"
            android:layout_width="fill_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            >
        </com.androidplot.xy.XYPlot>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/myProfileCoursesListTitle"
            android:textColor="@color/textColor"
            android:textSize="25sp">
        </TextView>

        <com.example.proiect_dam.ExpandableHeightListView
            android:id="@+id/myCoursesLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColor">
        </com.example.proiect_dam.ExpandableHeightListView>

    </LinearLayout>
</ScrollView>