<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Course">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_height="300dp"
            android:layout_width="300dp"
            android:id="@+id/courseImage"
            android:src="@color/colorAccent"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            app:riv_corner_radius="20dp"
            app:riv_mutate_background="false"
            app:riv_tile_mode="clamp"
            android:layout_marginEnd="-20dp"
            android:layout_marginTop="-15dp"
            >

        </com.makeramen.roundedimageview.RoundedImageView>

        <TextView
            android:id="@+id/courseTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/courseImage"
            android:layout_margin="20dp"
            android:text="@string/courseTitle"
            android:textSize="30sp"
            android:textColor="@color/textColor">

        </TextView>

        <TextView
            android:id="@+id/courseDescription"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/courseTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/courseDescription"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/courseContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/courseDescription"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/courseContent"
            android:textSize="20sp">

        </TextView>

        <fragment
            android:id="@+id/map"
            android:layout_below="@id/courseContent"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            tools:context=".MapsActivity" />

    </RelativeLayout>
</ScrollView>